header nav & home ihop.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
                 <div class="team-member">
                     <div class="team_img">
-                        <img src="./Logos/Screenshot_2020-09-25 Make A High-Quality Logo In Just 5 Minutes For Under $30 .PNG" alt="team-member_image">
+                        <img src="./Logos/WWLOGO.PNG" alt="team-member_image">
                     </div>
                     <h3>Sebastian Hånberg</h3>
                     <p class="role">UI Designer</p>
@@ -86,7 +86,7 @@
 
                 <div class="team-member">
                     <div class="team_img">
-                        <img src="./Logos/Screenshot_2020-09-25 Make A High-Quality Logo In Just 5 Minutes For Under $30 .PNG" alt="team-member_image">
+                        <img src="./Logos/WWLOGO.PNG" alt="team-member_image">
                     </div>
                     <h3>Kevin Angleborn</h3>
                     <p class="role">UI Designer</p>
@@ -97,7 +97,7 @@
 
                 <div class="team-member">
                     <div class="team_img">
-                        <img src="./Logos/Screenshot_2020-09-25 Make A High-Quality Logo In Just 5 Minutes For Under $30 .PNG" alt="team-member_image">
+                        <img src="./Logos/WWLOGO.PNG" alt="team-member_image">
                     </div>
                     <h3>Simon Persson</h3>
                     <p class="role">UI Designer</p>
